--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,11 +21,13 @@ steps:
       sudo partprobe /dev/sdc1
     fi
     # Mount data disk
+    echo 'Mount data disk'
     if ! mount | grep -q /dev/sdc1; then
       sudo sh -c 'echo "/dev/sdc1 /data ext4 defaults 0 0" >> /etc/fstab'
       sudo mount -a
     fi
     # Mount nfs
+    echo 'Mount nfs'
     [ ! -d /nfs ] && sudo mkdir -p /nfs
     if ! mount | grep -q jenkins-vol-1; then
       echo 'Run Install nfs-common'
@@ -36,6 +38,7 @@ steps:
       sudo mount -a
     fi
     # Install blobfuse
+    echo 'Install blobfuse'
     if ! dpkg -s blobfuse 1>/dev/null 2>&1; then
       wget https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
       sudo dpkg -i packages-microsoft-prod.deb
@@ -43,6 +46,7 @@ steps:
       sudo apt-get install -y blobfuse
     fi
     # Mount storage containers for debian mirrors
+    echo 'Mount storage containers for debian mirrors'
     if ! mount | grep -q /blobfuse-$(StorageAccount)-web; then
       sudo mkdir -p /blobfuse-$(StorageAccount)-web /blobfuse-$(StorageAccount)-aptly
       sudo chmod a+rx /blobfuse-$(StorageAccount)-web /blobfuse-$(StorageAccount)-aptly
