--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,8 @@ steps:
     echo 'Init is complete'
   displayName: 'Run init script'
 - bash: |
-    scripts/mirror/aptly.sh $(StorageAccount) "$(Distribution)" "$(CreateDB)"
+    echo $(sonic-gpg-enc-private-key) > "gpg.key"
+    scripts/mirror/aptly.sh $(StorageAccount) "$(Distribution)" "$(CreateDB)" "$(sonic-gpg-passphrase)"
   displayName: 'Update and publish debian mirrors by aptly'
 - task: AzureKeyVault@1
   inputs:
