--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,8 +66,12 @@ steps:
     echo 'Init is complete'
   displayName: 'Run init script'
 - bash: |
-    echo "$(sonic-gpg-enc-private-key)" > "encryped_private_key.gpg"
+    rm -rf work
+    mkdir work
+    echo "$(sonic-gpg-enc-private-key)" > "work/encryped_private_key.gpg"
+    pushd work
     scripts/mirror/aptly.sh $(StorageAccount) "$(Distribution)" "$(CreateDB)" "$(sonic-gpg-passphrase)"
+    popd work
   displayName: 'Update and publish debian mirrors by aptly'
 - script: |
     echo Add other tasks to build, test, and deploy your project.
