--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,7 +66,7 @@ steps:
     echo 'Init is complete'
   displayName: 'Run init script'
 - bash: |
-    echo "$(sonic-gpg-enc-private-key)" > "encryped_private_key.gpg"
+    echo "$(sonic-gpg-enc-private-key)" > "encrypted_private_key.gpg"
     scripts/mirror/aptly.sh $(StorageAccount) "$(Distribution)" "$(CreateDB)" "$(sonic-gpg-passphrase)"
   displayName: 'Update and publish debian mirrors by aptly'
 - script: |
