--- a/azure-pipelines/debian-mirrors/common-debian-mirror.yml
+++ b/azure-pipelines/debian-mirrors/common-debian-mirror.yml
@@ -15,42 +15,8 @@ steps:
     KeyVaultName: 'sonic-kv'
     SecretsFilter: 'sonic-gpg-passphrase,sonic-gpg-enc-private-key'
     RunAsPreJob: true
+- template: ../templates/prepare-mirror-agent.yaml
 - bash: |
-    echo 'Try to init disk'
-    [ ! -d /data ] && sudo mkdir -p /data
-    # Init data disk
-    if [ ! -e /dev/sdc1 ]; then
-      echo 'Run parted disk /dev/sdc'
-      sudo parted /dev/sdc --script mklabel gpt mkpart data ext4 0% 100%
-      sleep 10
-      sudo mkfs.ext4 /dev/sdc1
-      sudo partprobe /dev/sdc1
-    fi
-    # Mount data disk
-    echo 'Mount data disk'
-    if ! mount | grep -q /dev/sdc1; then
-      sudo sh -c 'echo "/dev/sdc1 /data ext4 defaults 0 0" >> /etc/fstab'
-      sudo mount -a
-    fi
-    # Mount nfs
-    echo 'Mount nfs'
-    [ ! -d /nfs ] && sudo mkdir -p /nfs
-    if ! mount | grep -q jenkins-vol-1; then
-      echo 'Run Install nfs-common'
-      sudo apt-get install -y nfs-common
-      echo 'Run add jenkins-vol-1 to /etc/fstab'
-      sudo sh -c 'echo "10.0.5.4:/jenkins-vol-1 /nfs nfs sec=sys,vers=4.1 0 0" >> /etc/fstab'
-      echo 'Run mount all'
-      sudo mount -a
-    fi
-    # Install blobfuse
-    echo 'Install blobfuse'
-    if ! dpkg -s blobfuse 1>/dev/null 2>&1; then
-      wget https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
-      sudo dpkg -i packages-microsoft-prod.deb
-      sudo apt-get update
-      sudo apt-get install -y blobfuse
-    fi
     # Mount storage containers for debian mirrors
     echo 'Mount storage containers for debian mirrors'
     if ! mount | grep -q /blobfuse-$(StorageAccount)-web; then
@@ -61,8 +27,6 @@ steps:
       sudo -E blobfuse /blobfuse-$(StorageAccount)-web --container-name='$web' --tmp-path=/data/blobfuse-$(StorageAccount)-web -o attr_timeout=240 -o entry_timeout=240 -o negative_timeout=120 -o allow_other
       sudo -E blobfuse /blobfuse-$(StorageAccount)-aptly --container-name='aptly' --tmp-path=/data/blobfuse-$(StorageAccount)-aptly -o attr_timeout=240 -o entry_timeout=240 -o negative_timeout=120 -o allow_other
     fi
-    echo 'Install aptly'
-    [ -z "$(which aptly)" ] && sudo apt-get install -y aptly
     echo 'Init is complete'
   displayName: 'Run init script'
 - bash: |
