--- a/azure-pipelines/debian-mirrors/common-debian-mirror.yml
+++ b/azure-pipelines/debian-mirrors/common-debian-mirror.yml
@@ -9,7 +9,7 @@ trigger:
 pool: sonic-mirror-build
 
 variables:
-- group: $(GPGVG)
+- group: Debian-Mirror-GPG-VG
 
 steps:
 - template: ../templates/prepare-mirror-agent.yaml
