Update common-debian-mirror.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/common-debian-mirror.yml
+++ b/azure-pipelines/debian-mirrors/common-debian-mirror.yml
@@ -17,4 +17,7 @@ jobs:
   - group: Debian-Mirror-Jessie
   steps:
   - template: ../templates/publish-mirror.yaml
+  - bash: |
+      echo Mirror_Distributions=$(Mirror_Distributions)
+    displayName: 'Test variables'
 
