--- a/config/aptly-debian.conf
+++ b/config/aptly-debian.conf
@@ -22,6 +22,11 @@
       "linkMethod": "copy",
       "verifyMethod":"size"
     },
+    "debian-security": {
+      "rootDir": "./publish/debian-security",
+      "linkMethod": "copy",
+      "verifyMethod":"size"
+    },
     "sonic": {
       "rootDir": "./publish/sonic",
       "linkMethod": "copy",
