--- a/azure-pipelines/templates/publish-mirror.yaml
+++ b/azure-pipelines/templates/publish-mirror.yaml
@@ -3,8 +3,8 @@ steps:
 - template: ../templates/prepare-mirror-storage.yaml
   parameters:
     storageAccount: $(StorageAccount)
-    storageAccountSasToken: $(storageAccountSasToken)
+    storageAccountSasToken: $(StorageAccountSasToken)
 - bash: |
     echo "$(sonic-gpg-enc-private-key)" > "encrypted_private_key.gpg"
-    scripts/mirror/aptly.sh "$(CreateDB)" "$(sonic-gpg-passphrase)" $(StorageAccount) "$(Mirror_Name)" "$(Mirror_URL)" "$(Mirror_Distributions)" "$(Mirror_Architectures)" "$(Mirror_Components)"
+    scripts/mirror/aptly.sh "$(CreateDB)" "$(sonic-gpg-passphrase)" $(StorageAccount) "$(Mirror_Name)" "$(Mirror_URL)" "$(Mirror_Distributions)" "$(Mirror_Architectures)" "$(Mirror_Components)" "$(MIRROR_FILESYSTEM)"
   displayName: 'Update and publish debian mirrors by aptly'
