--- a/azure-pipelines/templates/publish-mirror.yaml
+++ b/azure-pipelines/templates/publish-mirror.yaml
@@ -4,7 +4,10 @@ steps:
   parameters:
     storageAccount: $(StorageAccount)
     storageAccountSasToken: $(StorageAccountSasToken)
+    storageAccount: $(StorageAccountReplica)
+    storageAccountSasToken: $(StorageAccountReplicaSasToken)
+    publishToReplica: $(PublishToReplica)
 - bash: |
     echo "$(sonic-gpg-enc-private-key)" > "encrypted_private_key.gpg"
-    scripts/mirror/aptly.sh "$(CreateDB)" "$(sonic-gpg-passphrase)" $(StorageAccount) "$(Mirror_Name)" "$(Mirror_URL)" "$(Mirror_Distributions)" "$(Mirror_Architectures)" "$(Mirror_Components)" "$(MIRROR_FILESYSTEM)"
+    scripts/mirror/aptly.sh "$(CreateDB)" "$(sonic-gpg-passphrase)" "$(Mirror_Name)" "$(Mirror_URL)" "$(Mirror_Distributions)" "$(Mirror_Architectures)" "$(Mirror_Components)" "$(MIRROR_FILESYSTEM)"
   displayName: 'Update and publish debian mirrors by aptly'
