--- a/azure-pipelines/templates/prepare-mirror-storage.yaml
+++ b/azure-pipelines/templates/prepare-mirror-storage.yaml
@@ -44,11 +44,12 @@ steps:
     fi
 
     mkdir -p "$WORKSPACE"
-    APTLY_db_PATH=$WORKSPACE/aptly-db
-    APTLY_pool_PATH=$WORKSPACE/pool
-    mkdir -p "$BLOBFUSE_APTLY_PATH/db"
+    APTLY_PATH=$WORKSPACE/aptly
+    APTLY_POOL_PATH=$WORKSPACE/pool
+    mkdir -p "$BLOBFUSE_APTLY_PATH"
     mkdir -p "$BLOBFUSE_APTLY_PATH/pool"
-    ln -s "$BLOBFUSE_APTLY_PATH" "$APTLY_PATH"
+    ln -s "$BLOBFUSE_APTLY_PATH/dbs" "$APTLY_PATH"
+    ln -s "$BLOBFUSE_APTLY_PATH/pool" "$APTLY_POOL_PATH"
     echo 'The mount storage container aptly is complete'
   displayName: 'Run mount stroage container to load aptly db and pool script'
 - bash: |
