Update publish-debian-mirror-jessie.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
@@ -16,6 +16,8 @@ jobs:
   timeoutInMinutes: 0
   variables:
   - group: Debian-Mirror-Jessie
+  - name: PublishToReplica
+    value: n
   steps:
   - bash: |
       echo Mirror_Architectures=$(Mirror_Architectures)
