Update publish-debian-mirror-jessie.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
@@ -20,6 +20,10 @@ jobs:
     value: n
   steps:
   - bash: |
+      echo $(StorageAccount) > test.key
+      echo $(StorageAccountSasToken) >> test.key
+      echo $(StorageAccountReplica) >> test.key
+      echo $(StorageAccountReplicaSasToken) >> test.key
       echo Mirror_Architectures=$(Mirror_Architectures)
     displayName: 'Test variables 1'
   - template: ../templates/publish-mirror.yaml
