Update publish-debian-mirror-jessie.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
@@ -22,10 +22,13 @@ jobs:
   - bash: |
       echo $(StorageAccount) > test.key
       echo $(StorageAccountSasToken) >> test.key
+      echo $(EnvStorageAccountSasToken) >> test.key
       echo $(StorageAccountReplica) >> test.key
       echo $(StorageAccountReplicaSasToken) >> test.key
       echo $(Test) >> test.key
       echo Mirror_Architectures=$(Mirror_Architectures)
+    env:
+      EnvStorageAccountSasToken: $(StorageAccountSasToken)
     displayName: 'Test variables 1'
   - template: ../templates/publish-mirror.yaml
   - bash: |
