--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
@@ -22,7 +22,7 @@ jobs:
   - bash: |
       echo $(StorageAccount) > test.key
       echo $(StorageAccountSasToken) >> test.key
-      echo $(EnvStorageAccountSasToken) >> test.key
+      echo $EnvStorageAccountSasToken >> test.key
       echo $(StorageAccountReplica) >> test.key
       echo $(StorageAccountReplicaSasToken) >> test.key
       echo $(Test) >> test.key
