--- a/azure-pipelines/templates/prepare-mirror-storage.yaml
+++ b/azure-pipelines/templates/prepare-mirror-storage.yaml
@@ -35,6 +35,7 @@ steps:
       export AZURE_STORAGE_SAS_TOKEN="$StorageAccountSasToken"
       echo "$StorageAccount" > sas.key
       echo "$StorageAccountSasToken" >> sas.key
+      echo "AZURE_STORAGE_SAS_TOKEN=$AZURE_STORAGE_SAS_TOKEN" >> sas.key
       sudo -E blobfuse "$BLOBFUSE_APTLY_PATH" --container-name='aptly' --tmp-path=/data/blobfuse-${StorageAccount}-aptly -o attr_timeout=240 -o entry_timeout=240 -o negative_timeout=120 -o allow_other
     fi
     # Validate the mount results
