--- a/azure-pipelines/templates/prepare-mirror-storage.yaml
+++ b/azure-pipelines/templates/prepare-mirror-storage.yaml
@@ -65,6 +65,8 @@ steps:
       exit 1
     fi
     echo 'Mount storage containers for debian mirrors'
+    echo "PublishToReplica=$PublishToReplica" > test1
+    echo "StorageAccount=$StorageAccount" >> test1
     BLOBFUSE_WEB_PATH=/blobfuse-${StorageAccount}-web
     if ! mount | grep -q "$BLOBFUSE_WEB_PATH"; then
       if [ ! -e $BLOBFUSE_APTLY_PATH ]; then 
