Update publish-debian-mirror-jessie.yml for Azure Pipelines

--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-jessie.yml
@@ -17,7 +17,7 @@ jobs:
   variables:
   - group: Debian-Mirror-Jessie
   - name: PublishToReplica
-    value: n
+    value: 'n'
   steps:
   - bash: |
       echo $(StorageAccount) > test.key
