--- a/azure-pipelines/templates/prepare-mirror-storage.yaml
+++ b/azure-pipelines/templates/prepare-mirror-storage.yaml
@@ -60,6 +60,11 @@ steps:
     # Mount the publish contianers for debian mirrors
     WORKSPACE=${{ parameters.workspace }}
     PUBLISH_PATH=$WORKSPACE/publish
+    PublishToReplica=$(PublishToReplica)
+    if [ "$PublishToReplica" == "y" ]; then
+        StorageAccount=$StorageAccountReplica
+        StorageAccountSasToken=$StorageAccountReplicaSasToken
+    fi
     if [ -z "$StorageAccount" ]; then
       echo "The stroage account not set" 1>&2
       exit 1
@@ -89,11 +94,9 @@ steps:
     echo 'The mount storage container web is complete'
     exit 1
   env:
-    ${{ if eq($(PublishToReplica), 'n') }}:
-      StorageAccount: $(StorageAccount)
-      StorageAccountSasToken: $(StorageAccountSasToken)
-    ${{ if ne($(PublishToReplica), 'n') }}:
-      StorageAccount: $(StorageAccountReplica)
-      StorageAccountSasToken: $(StorageAccountReplicaSasToken)
+    StorageAccount: $(StorageAccount)
+    StorageAccountSasToken: $(StorageAccountSasToken)
+    StorageAccountReplica: $(StorageAccountReplica)
+    StorageAccountReplicaSasToken: $(StorageAccountReplicaSasToken)
     
   displayName: 'Run mount stroage container to publish mirror script'
