--- a/azure-pipelines/templates/prepare-mirror-storage.yaml
+++ b/azure-pipelines/templates/prepare-mirror-storage.yaml
@@ -44,9 +44,12 @@ steps:
     mkdir -p "$WORKSPACE"
     APTLY_PATH=$WORKSPACE/aptly
     APTLY_POOL_PATH=$WORKSPACE/pool
+    echo "pwd=$(pwd)"
+    echo "APTLY_PATH=$APTLY_PATH"
+    echo "APTLY_POOL_PATH=$APTLY_POOL_PATH"
     mkdir -p "$BLOBFUSE_APTLY_PATH"
     mkdir -p "$BLOBFUSE_APTLY_PATH/pool"
-    ln -s "$BLOBFUSE_APTLY_PATH/dbs" "$APTLY_PATH"
+    ln -s "$BLOBFUSE_APTLY_PATH" "$APTLY_PATH"
     ln -s "$BLOBFUSE_APTLY_PATH/pool" "$APTLY_POOL_PATH"
     echo 'The mount storage container aptly is complete'
   env:
