--- a/azure-pipelines/templates/prepare-mirror-storage.yaml
+++ b/azure-pipelines/templates/prepare-mirror-storage.yaml
@@ -53,8 +53,10 @@ steps:
     echo "ln -s $BLOBFUSE_APTLY_PATH/pool $APTLY_POOL_PATH"
     ln -s $BLOBFUSE_APTLY_PATH $APTLY_PATH
     [ $? -ne 0 ] && echo "Failed to make link"
+    ls work
     ln -s $BLOBFUSE_APTLY_PATH/pool $APTLY_POOL_PATH
     [ $? -eq 0 ] && echo "Make link successfully"
+    ls work
     echo 'The mount storage container aptly is complete'
   env:
     StorageAccount: $(StorageAccount)
