--- a/azure-pipelines/templates/publish-mirror.yaml
+++ b/azure-pipelines/templates/publish-mirror.yaml
@@ -12,6 +12,6 @@ steps:
     echo "$(sonic-gpg-enc-private-key)" > "encrypted_private_key.gpg"
     scripts/mirror/aptly.sh "$(CreateDB)" "$(Mirror_Name)" "$(Mirror_URL)" "$(Mirror_Distributions)" "$(Mirror_Architectures)" "$(Mirror_Components)" "$(MIRROR_FILESYSTEM)"
   env:
-    PASSPHRASE=$(sonic-gpg-passphrase)
+    PASSPHRASE: $(sonic-gpg-passphrase)
     
   displayName: 'Update and publish debian mirrors by aptly'
