--- a/azure-pipelines/debian-mirrors/publish-debian-mirror-buster.yml
+++ b/azure-pipelines/debian-mirrors/publish-debian-mirror-buster.yml
@@ -11,21 +11,25 @@ pool: sonic-mirror-build-2
 variables:
 - group: Debian-Mirror-GPG-VG
 - group: Debian-Mirror-Storage-US-East
-jobs:
-- job: PublishBusterToUSEast
-  timeoutInMinutes: 0
-  variables:
-  - group: Debian-Mirror-Stretch
-  - name: PublishToReplica
-    value: 'n'
-  steps:
-  - template: ../templates/publish-mirror.yaml
-- job: PublishBusterToUSEastReplica
-  variables:
-  - group: Debian-Mirror-Buster
-  - name: PublishToReplica
-    value: 'y'
-  - name: CreateDB
-    value: 'n'
-  steps:
-  - template: ../templates/publish-mirror.yaml
+stages:
+- stage: PublishBusterToUSEast
+  jobs:
+  - job: PublishBusterToUSEast
+    timeoutInMinutes: 0
+    variables:
+    - group: Debian-Mirror-Buster
+    - name: PublishToReplica
+      value: 'n'
+    steps:
+    - template: ../templates/publish-mirror.yaml
+  - job: PublishBusterToUSEasteplica
+    timeoutInMinutes: 0
+    dependsOn: PublishBusterToUSEast
+    variables:
+    - group: Debian-Mirror-Buster
+    - name: PublishToReplica
+      value: 'y'
+    - name: CreateDB
+      value: 'n'
+    steps:
+    - template: ../templates/publish-mirror.yaml
