--- a/azure-pipelines/templates/publish-mirror.yaml
+++ b/azure-pipelines/templates/publish-mirror.yaml
@@ -1,3 +1,7 @@
+parameters:
+- name: 'enableNfs'
+  type: string
+  default: 'n'
 steps:
 - template: ../templates/prepare-mirror-agent.yaml
 - template: ../templates/prepare-mirror-storage.yaml
@@ -8,6 +12,7 @@ steps:
     storageAccountReplicaSasToken: $(StorageAccountReplicaSasToken)
     publishToReplica: $(PublishToReplica)
     mirrorName: $(Mirror_Name)
+    enableNfs: {{ parameters.enableNfs }}
 - bash: |
     echo "$(sonic-gpg-enc-private-key)" > "encrypted_private_key.gpg"
     scripts/mirror/aptly.sh "$(CreateDB)" "$(Mirror_Name)" "$(Mirror_URL)" "$(Mirror_Distributions)" "$(Mirror_Architectures)" "$(Mirror_Components)" "$(MIRROR_FILESYSTEM)"
