--- a/azure-pipelines/templates/publish-mirror.yaml
+++ b/azure-pipelines/templates/publish-mirror.yaml
@@ -12,7 +12,7 @@ steps:
     storageAccountReplicaSasToken: $(StorageAccountReplicaSasToken)
     publishToReplica: $(PublishToReplica)
     mirrorName: $(Mirror_Name)
-    enableNfs: {{ parameters.enableNfs }}
+    enableNfs: ${{ parameters.enableNfs }}
 - bash: |
     echo "$(sonic-gpg-enc-private-key)" > "encrypted_private_key.gpg"
     scripts/mirror/aptly.sh "$(CreateDB)" "$(Mirror_Name)" "$(Mirror_URL)" "$(Mirror_Distributions)" "$(Mirror_Architectures)" "$(Mirror_Components)" "$(MIRROR_FILESYSTEM)"
