--- a/azure-pipelines/templates/prepare-mirror-agent.yaml
+++ b/azure-pipelines/templates/prepare-mirror-agent.yaml
@@ -12,7 +12,7 @@ steps:
     fi
     # Mount data disk
     echo 'Mount data disk'
-    if ! mount | grep -q /dev/disk/azure/scsi1/lun0-part1; then
+    if ! mount | grep -q "/data "; then
       sudo sh -c 'echo "/dev/disk/azure/scsi1/lun0-part1 /data ext4 defaults 0 0" >> /etc/fstab'
       sudo mount -a
     fi
