--- a/azure-pipelines/templates/prepare-mirror-storage.yaml
+++ b/azure-pipelines/templates/prepare-mirror-storage.yaml
@@ -69,7 +69,7 @@ steps:
     # Mount storage containers for the aptly db and/or pool of debian mirrors
     WORKSPACE=${{ parameters.workspace }}
     MIRROR_NAME=${{ parameters.mirrorName }}
-    if [ -z "$StorageAccount" ]; then:/
+    if [ -z "$StorageAccount" ]; then
       echo "The stroage account not set" 1>&2
       exit 1
     fi
